- Add hints for simple text boxes - Tweak detail view CSS to keep Title font large - Hide the detail view, instead of making it invisible, because of   Firefox bug that makes hint text visible
git-svn-id: svn+ssh://svn.osafoundation.org/svn/server/cosmo/trunk@7099 5fd0b11a-f2f7-0310-948e-c8f80ebed640

--- a/cosmo-js/src/cosmo/themes/default/DetailView.css
+++ b/cosmo-js/src/cosmo/themes/default/DetailView.css
@@ -1,4 +1,6 @@
 @import url("Checkbox.css");
+@import url("HintText.css");
+
 #detailView{
     overflow-x: hidden;
 }
@@ -11,7 +13,7 @@
     background: #F7F7F7;
 }
 .cosmoDetailHidden {
-    visibility: hidden;
+    display: none;
 }
 
 .cosmoDetailViewControlButtons {
@@ -71,9 +73,12 @@
 }
 
 .cosmoDetailViewTitleInput {
+    margin-left: 5px !important;
+}
+
+.cosmoDetailViewTitleInput input {
     font-size: 15px !important;
     font-weight: bold;
-    margin-left: 5px !important;
 }
 
 .cosmoDetailViewWideBox {
